--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,260 +1,4 @@
-<script type= "text/javascript" defer="defer">
-  var calendarSettings = {
-    month : new Date().getMonth(),
-    year : new Date().getFullYear(),
-    firstDayOfMonth: dateUtils.firstDayofMonth(this.year, this.month),
-    monthLength: dateUtils.monthLength(this.year, this.month),
-    setValues : function(year, month){
-            this.month = month;
-            this.year = year;
-            this.firstDayOfMonth= dateUtils.firstDayofMonth(this.year, this.month);
-            this.monthLength= dateUtils.monthLength(this.year, this.month);
-    }
-};
-</script>
-
-
-<script type= "text/javascript" defer="defer">
-
-AJS.toInit(function($){
-// Shows the dialog when the "Show dialog" button is clicked
-  AJS.$("#dialog-show-button").click(function(e) {
-    e.preventDefault();
-    AJS.dialog2("#demo-dialog").show();
-  });
-
-  AJS.$("#dialog-submit-button").click(function (e) {
-    e.preventDefault();
-    AJS.dialog2("#demo-dialog").hide();
-  });
-
-  AJS.$("#select-previous-month").click(function(e) {
-  });
-
-  AJS.$("#select-next-month").click(function(e) {
-  });
-    //furnction  to capture variables from get request
-     jQuery.extend({
-            getValues:function(url){
-              var result=null;
-              jQuery.ajax({
-                url:url,
-                type: 'get',
-                async:false,
-                success: function(data){
-                  result=data;
-                }
-              });
-              return result;
-            }
-        });
-    //gets the current page's information
-       var currentPage =  {
-               pageID : $content.getIdAsString(),
-               setValues: function(){
-                 this.path = contextPath + "/rest/api/content/" + this.pageID;
-                 this.result = jQuery.getValues(this.path + "?expand=body.storage,version");
-                 this.pageTitle = this.result["title"];
-                 this.versionNumber = this.result["version"]["number"];
-                 this.pageBody = this.result["body"]["storage"]["value"];
-               }
-             };
-
-
-       currentPage.setValues();
-
-       //Read the list of events stored on the page
-       let eventList = currentPage.pageBody.match(/<h1>Events<\/h1><ul>(.+?)<\/ul>/)[0].split("<li>").filter(listElt =>/^Event from/.test(listElt));
-       var format = function(str){
-                        var vals = /Event from ([\d-]+) to ([\d-]+)\:\s(.*?)<\/li>/.exec(str).slice(1,4);
-                        return vals.map(ev => ev.replace(/\-/g,"_"));
-                };
-                eventUtils.processEventStrArray(eventList, format);
-
-var eventDialog = (function(){
-
-      let dialog = new AJS.Dialog({
-        id: "event-create-dialog",
-        closeOnOutsideClick: true,
-      });
-      let beginDate;
-      let endDate;
-
-      dialog.addHeader("Create a new event");
-      let editField = `
-        <form class="aui">
-          <fieldset>
-            <div class="field-group">
-              <label for="d-fname">Event Description<span class="aui-icon icon-required"> required</span></label>
-              <input class="text" type="text" id="eventName" name="d-fname" title="first name">
-              <div class="description">Description of event</div>
-            </div>
-            <div class="field-group">
-                <label for="begin-date">When<span class="aui-icon icon-required"> required</span></label>
-                <input id="begin-date" type="date" /> to
-                <input id="dateEnd" type="date" />
-            </div>
-          </fieldset>
-       </form>`
-
-      dialog.addPanel("Panel 1", editField, "panel-body");
-      dialog.addLink("Cancel", function (dialog) {
-        dialog.hide();
-      }, "#");
-
-    dialog.addButton("create event", function (dialog) {
-        let options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' }
-        let beginDate = $("#begin-date").val();
-        let endDate = $("#dateEnd").val();
-        let eventName = $("#eventName").val();
-        if(eventName.length < 1 ){
-          AJS.flag({
-            type:'error',
-            title: 'You must provide a name for the event',
-            body: "An event name is necessary to create a new event"
-          });
-          return;
-        }
-        dateUtils.setSeparator("-");
-        if(dateUtils.dayStampToDate(endDate) < dateUtils.dayStampToDate(beginDate)){
-          AJS.flag({
-            type:'error',
-            title: 'Invalid end date',
-            body: 'The end date for your event should be after or on the start date',
-          });
-          return; //exit create event without creating an event
-        }
-        console.log("creating a new event from " + beginDate + " to " + endDate);
-
-        let newBody = currentPage.pageBody.replace(
-          "<h1>Events</h1><ul>",
-          "<h1>Events</h1><ul><li>Event from "+ beginDate +" to " + endDate + ": " + $('#eventName').val() + "</li>");
-
-        var jsondata = {
-          "version":{"number":currentPage.versionNumber + 1},
-          "title":currentPage.pageTitle,
-          "type":"page",
-          "body":{"storage":{"value":newBody,"representation":"storage"}}};
-
-        jQuery.ajax
-          ({
-            type: "PUT",
-            url: currentPage.path,
-            contentType:"application/json; charset=utf-8",
-            dataType: "json",
-            async: false,
-            data: JSON.stringify(jsondata),
-            success: function (){
-              console.log('Page saved!');
-              location.reload();
-            },
-            error : function(xhr, errorText){
-              console.log('Error '+ xhr.responseText);
-              location.reload();
-            }
-        });
-      });
-  return{
-        setParams: function(dayStamp){
-          var dayStampISO8601 = dayStamp.replace(/\_/g, "-");
-          $("#dateEnd").val(dayStampISO8601 );
-          $("#begin-date").val(dayStampISO8601);
-        },
-        show: function(){
-          dialog.show();
-        }
-      }
-    })();
-
-
-if (typeof dateUtils === 'object') {
-  console.log('dateUtils loaded');
-}else{
-console.log('dateUtils notloaded');
-}
-
-
-
-function populateTable(theMonth, theYear) {
-
-    // initialize date-dependent variables
-    let firstDay = calendarSettings.firstDayOfMonth;
-    let howMany = dateUtils.monthLength(theYear, theMonth);
-    $("#tableHeader").html(`<h1>${dateUtils.monthIdxToStr(theMonth)} ${theYear}</h1>`);
-
-   // initialize vars for table creation
-    let dayCounter = 1;
-    $("#tableBody").html("");
-    while (dayCounter <= howMany) {
-  	  let newRow = "<TR>";
-  	  let addedDays = [];
-  	  for(let i=0; i<7; i++){
-  		if(dayCounter > howMany) {break;}
-  		  if(($("#tableBody tr").length >= 1) || (i >= firstDay)){
-                       let dayID =dateUtils.dayStamp(theYear, theMonth, dayCounter);
-                       addedDays.push(dayID);
-                       newRow += "<td ID='" + dayID + "' class='" + ((dayID.localeCompare(dateUtils.dayStamp()) == 0 )?"day":"today") + "'>";
-                       newRow += dayCounter++;
-                       var eventOnThatDay = eventUtils.eventsAt(dayID);
-                       if(eventOnThatDay.length > 0){
-                                             newRow += "<span style='color:red'><a id='"+
-                                             dayID +"' title='" +
-                                             eventOnThatDay.map(ev=>ev.eventTitle).join(",") +"'> &nbsp;" +
-                                             eventOnThatDay.length + " event(s)</a></span>";}
-                       newRow += "</td>";
-		  }
-		  else{
-			  newRow += "<td class='day'></td>";
-		  }
-	  }
-	  newRow += "</tr>";
-	  $("#tableBody").append(newRow);
-  for(let i=0; i<addedDays.length; i++){
-      $("#"+addedDays[i]).click(function(){showDayDialog(addedDays[i]);});
-    }
-  }
-}
-//function called when user clicks on a day
-function showDayDialog(dayID){
-  eventDialog.setParams(dayID);
-    eventDialog.show();
-}
-function fillYears() {
-      var today = new Date();
-      var thisYear = today.getFullYear();
-      var yearChooser = document.dateChooser.chooseYear;
-      for (i = thisYear; i < thisYear + 5; i++) {
-          yearChooser.options[yearChooser.options.length] = new Option(i, i)
-      }
-      setCurrMonth(today)
-  }
-  function setCurrMonth(today) {
-      document.dateChooser.chooseMonth.selectedIndex = today.getMonth()
-  }
-
-  function highLightEventsInCalendar(){
-      let todayDate = Date.now();
-      console.log(
-        todayDate.getDate().toString().padStart(2,'0'));
-      $("#2019-03-15").css( "color", "red" );
-  }
-	fillYears();
-
-	$("#dateChooser").change(function(){
-    let theMonth = document.dateChooser.chooseMonth.selectedIndex;
-    let theYear = parseInt(document.dateChooser.chooseYear.options[document.dateChooser.chooseYear.selectedIndex].text);
-    calendarSettings.setValues(
-      parseInt(document.dateChooser.chooseYear.options[document.dateChooser.chooseYear.selectedIndex].text),
-      document.dateChooser.chooseMonth.selectedIndex);
-     populateTable(theMonth, theYear);
-	  });
-
-    let theMonth = document.dateChooser.chooseMonth.selectedIndex;
-    let theYear = parseInt(document.dateChooser.chooseYear.options[document.dateChooser.chooseYear.selectedIndex].text);
-	  populateTable(theMonth, theYear);
-
-  });
-</script>
+<h1>{{>page/title}}</h1>
 
 
 <HR>
@@ -284,3 +28,7 @@ function fillYears() {
    </TD>
 </TR>
 </TABLE>
+
+<script src="/js/dateUtils.js"></script>
+<script src="/js/eventUtils.js"></script>
+<script src="/js/main.js"></script>
