--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Example App</title>
+    <title></title>
 	<!--  AUI Core -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui.min.js"></script>
@@ -15,10 +15,20 @@
 	<!-- AUI Datepicker and Soy templates -->
 	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui-datepicker.min.js"></script>
 	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui-soy.min.js"></script> 
+	<link rel="stylesheet" href="/css/styles.css" media="all">
 </head>
 <body>
 
-    {{{body}}}
+<div class="aui-page-panel">
+    <div class="aui-page-panel-inner">
+        <div class="aui-page-panel-nav">
+        {{> page/nav}}        
+        </div>
 
+        <section class="aui-page-panel-content">
+        {{{body}}}
+        </section>
+    </div>
+</div>
 </body>
 </html>
