--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,11 +33,36 @@
   }
 
 .eventList{
-border-style: dotted;
-border-width: 1;
-border-color:blue;
+margin-left:4px;
+padding-left: 1px;
 }
 
+  .eventView{
+    background-color: #4ABDAC;
+	  margin-top:2px;
+	  margin-bottom: 2px;
+	  padding-left:4px;
+	  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  }
+  .aui-expander-content{
+    color:white
+  }
+  .eventTitle{
+    color: white;
+  }
+  .event-controls{
+    width:100%;
+    display: inline;
+  padding-left:8px;
+  color:white;
+  }
+  .event-dates{
+    color: white;
+  }
+  .event-edit-btn{
+    cursor: pointer;
+    padding-left:4px;
+  }
   .tableHeader h1 {
     margin: 0;
  padding: 10px;
