--- a/views/partials/page/nav.handlebars
+++ b/views/partials/page/nav.handlebars
@@ -1,8 +1,9 @@
+<h1>Events</h1>
 <ul>
-    <li><a href="/">Home</a></li>
+    <li>Event from 2019-04-10 to 2019-04-10: Christmas : Santa claus is not coming this year</li>
+<li>Event from 2019-04-11 to 2019-04-11: cvdsa : expect it to do something and something else</li>
+<li>Event from 2019-04-24 to 2019-06-24: gfds : whatever happens there</li>
     <li><a href="/yell">Yell</a></li>
     <li><a href="/exclaim">Exclaim</a></li>
     <li><a href="/echo/Hello">Echo: Hello</a></li>
 </ul>
-
-
