--- a/views/partials/page/nav.handlebars
+++ b/views/partials/page/nav.handlebars
@@ -2,6 +2,7 @@
 <ul>
     <li>Event from 2019-04-10 to 2019-04-10: Christmas : Santa claus is not coming this year</li>
 <li>Event from 2019-04-11 to 2019-04-11: cvdsa : expect it to do something and something else</li>
+<li>Event from 2019-04-24 to 2019-06-25: testEv</li>
 <li>Event from 2019-04-24 to 2019-06-24: gfds : whatever happens there</li>
     <li><a href="/yell">Yell</a></li>
     <li><a href="/exclaim">Exclaim</a></li>
