implemented event parent class

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -32,6 +32,8 @@
 </TR>
 </TABLE>
 
+<script src="/js/calendarSettings.js"></script>
 <script src="/js/dateUtils.js"></script>
+<script src="/js/events.js"></script>
 <script src="/js/eventUtils.js"></script>
 <script src="/js/main.js"></script>
