--- a/views/partials/page/nav.handlebars
+++ b/views/partials/page/nav.handlebars
@@ -1,5 +1,6 @@
 <h1>Events</h1>
 <ul>
+    <li>Event from 2019-04-14 to 2019-05-10: event with a  long title : Santa claus is not coming this year</li>
     <li>Event from 2019-04-10 to 2019-04-10: Christmas : Santa claus is not coming this year</li>
 <li>Event from 2019-04-11 to 2019-04-11: cvdsa : expect it to do something and something else</li>
 <li>Event from 2019-04-24 to 2019-06-25: testEv</li>
