--- a/views/partials/page/eventDialog.handlebars
+++ b/views/partials/page/eventDialog.handlebars
@@ -1,4 +1,43 @@
-<section id="demo-dialog" class="aui-dialog2 aui-dialog2-medium aui-layer" role="dialog" aria-hidden="true">
+<script>
+AJS.toInit(function($){
+       AJS.$("#dialog-submit-button").click(function (e) {
+           let beginDate = $("#begin-date").val(),
+               endDate = $("#dateEnd").val(),
+               eventName = $("#eventName").val(),
+               eventDesc = $("#descr").val();
+
+           e.preventDefault();
+           if(eventName.length < 1 ){
+             AJS.flag({
+               type:'error',
+               title: 'You must provide a name for the event',
+               body: "An event name is necessary to create a new event"
+             });
+             AJS.dialog2("#demo-dialog").hide();
+             return;
+           }
+           dateUtils.setSeparator("-");
+           if(dateUtils.dayStampToDate(endDate) < dateUtils.dayStampToDate(beginDate)){
+             AJS.flag({
+               type:'error',
+               title: 'Invalid end date',
+               body: 'The end date for your event should be after or on the start date',
+             });
+             AJS.dialog2("#demo-dialog").hide();
+             return; //exit create event without creating an event
+           }
+           if(AJS.$("#event-id").text().length > 0){
+             alert("Editing existing event " + AJS.$("#event-id").text());
+           }
+           else{
+           console.log("creating a new event from " + beginDate + " to " + endDate);
+           }
+           AJS.dialog2("#demo-dialog").hide();
+       });
+});
+</script>
+
+<section id="event-dialog" class="aui-dialog2 aui-dialog2-medium aui-layer" role="dialog" aria-hidden="true">
     <header class="aui-dialog2-header">
         <h2 class="aui-dialog2-header-main">Create a new event</h2>
         <a class="aui-dialog2-header-close">
@@ -6,10 +45,9 @@
         </a>
     </header>
     <div class="aui-dialog2-content">
-
-
-           <form class="aui">
-          <fieldset>
+      <div id="event-id" class="hidden"></div>
+      <form class="aui">
+        <fieldset>
             <div class="field-group">
               <label for="d-fname">Event Description<span class="aui-icon icon-required"> required</span></label>
               <input class="text" type="text" id="eventName" name="d-fname" title="first name">
