--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,13 +6,13 @@
 
 <HR>
 <TABLE ID="calendarTable" class="aui">
-<thead>
+<thead ID="tableCalendar-header">
 <TR>
     <TH><button id="dialog-show-button" class="aui-button">Add an event</button></TH>
-    <TH><span id="select-previous-month" 
+    <TH><span id="select-previous-month"
                 class="aui-icon aui-icon-large aui-iconfont-arrows-left monthSelector">Insert meaningful text here for accessibility</span></TH>
-    <TH ID="tableHeader" COLSPAN=4></TH>
-    <TH><span id="select-next-month" 
+    <TH ID="tableCalendar-title" COLSPAN=4></TH>
+    <TH><span id="select-next-month"
                 class="aui-icon aui-icon-large aui-iconfont-arrows-right monthSelector">Insert meaningful text here for accessibility</span></TH>
 </TR>
 <TR>
