Added forEach function to evenUtils

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -24,19 +24,14 @@
     <TD COLSPAN=7>
     <FORM name="dateChooser" ID="dateChooser" class="aui">
         <SELECT ID="chooseMonth" name="chooseMonth">
-            <OPTION SELECTED>January<OPTION>February
-            <OPTION>March<OPTION>April<OPTION>May
-            <OPTION>June<OPTION>July<OPTION>August
-            <OPTION>September<OPTION>October
-            <OPTION>November<OPTION>December
-    </SELECT>
+    	</SELECT>
     <SELECT NAME="chooseYear">
     </SELECT>
     </FORM>
    </TD>
 </TR>
 </TABLE>
-
+<script src="/data/appData.json"></script>
 <script src="/js/calendarSettings.js"></script>
 <script src="/js/dateUtils.js"></script>
 <script src="/js/events.js"></script>
