--- a/views/partials/page/eventDialog.handlebars
+++ b/views/partials/page/eventDialog.handlebars
@@ -42,7 +42,7 @@ AJS.toInit(function($){
 
 <section id="event-dialog" class="aui-dialog2 aui-dialog2-medium aui-layer" role="dialog" aria-hidden="true">
     <header class="aui-dialog2-header">
-        <h2 class="aui-dialog2-header-main" id="event-id">Create a new event</h2>
+        <h2 class="aui-dialog2-header-main" id="event-dialog-action">Create a new event</h2>
         <a class="aui-dialog2-header-close">
             <span class="aui-icon aui-icon-small aui-iconfont-close-dialog">Close</span>
         </a>
