--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,5 +40,12 @@
 	{{> page/footer}}
   </footer>
   </div>
+<script src="/data/appData.json"></script>
+<script src="/js/calendarSettings.js"></script>
+<script src="/js/dateUtils.js"></script>
+<script src="/js/events.js"></script>
+<script src="/js/eventUtils.js"></script>
+<script src="/js/calendarUI.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
