work on event module

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,8 +44,8 @@
 <script src="/js/calendarSettings.js"></script>
 <script src="/js/dateUtils.js"></script>
 <script src="/js/events.js"></script>
-<script src="/js/eventUtils.js"></script>
-<script src="/js/calendarUI.js"></script>
+<script src="/js/calendarEvents.js"></script>
+<script src="/js/ui.js"></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
