resolve packagejson conflict

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,15 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
-	<!--  AUI Core -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <title>Bambi</title>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui.min.js"></script>
+
+
+	<!--  AUI Core -->
 	<link rel="stylesheet" href="//aui-cdn.atlassian.com/aui-adg/6.0.9/css/aui.min.css" media="all">
 
 	<!-- AUI Experimental components -->
 	<link rel="stylesheet" href="//aui-cdn.atlassian.com/aui-adg/6.0.9/css/aui-experimental.min.css" media="all">
-	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui-experimental.min.js"></script>
+
+    <script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui-experimental.min.js"></script>
 
 	<!-- AUI Datepicker and Soy templates -->
 	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui-datepicker.min.js"></script>
@@ -46,6 +49,6 @@
 <script src="/js/events.js"></script>
 <script src="/js/calendarEvents.js"></script>
 <script src="/js/ui.js"></script>
-<script src="/js/main.js"></script>
+<script src="/js/app/main.js"></script>
 </body>
 </html>
