separated pageManager from ui.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,6 +49,7 @@
 <script src="/js/events.js"></script>
 <script src="/js/calendarEvents.js"></script>
 <script src="/js/ui.js"></script>
+<script src="/js/pageManager.js"></script>
 <script src="/js/app/main.js"></script>
 </body>
 </html>
