--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,13 +43,6 @@
 	{{> page/footer}}
   </footer>
   </div>
-<script src="/data/appData.json"></script>
-<script src="/js/calendarSettings.js"></script>
-<script src="/js/dateUtils.js"></script>
-<script src="/js/events.js"></script>
-<script src="/js/calendarEvents.js"></script>
-<script src="/js/ui.js"></script>
-<script src="/js/pageManager.js"></script>
-<script src="/js/app/main.js"></script>
+<script src="/js/lib/bundle.js"></script>
 </body>
 </html>
