added sidebar to calendar UI

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,6 +5,16 @@
 
 
 <HR>
+
+<div class="calendar-container">
+
+
+<div class="calendar-sidebar">
+	<div class="sidebar-nav">
+		<h2 id="sidebar-heading"></h2>	
+	</div>
+</div>
+<div class="calendar-table-container">
 <TABLE ID="calendarTable" class="aui">
 <thead ID="tableCalendar-header">
 <TR>
@@ -31,4 +41,5 @@
    </TD>
 </TR>
 </TABLE>
-
+</div>
+</div>
