--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,21 @@
    height: auto;
    z-index: 3002;
  }
- #calendarTable{
+.calendar-container {
+
+}
+.calendar-sidebar {
+	width: 10%;
+	margin: 0 auto;
+	float: left;
+	background:linear-gradient(120deg, lighten($blue-white, 5%), $blue-white);
+	padding-bottom: 0.7rem;
+}
+.calendar-table-container{
+	width: 90%;
+	float: right;
+}
+#calendarTable{
   table-layout: fixed;
   border-collapse: collapse;
   overflow: hidden;
