changed ui module

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,7 +19,7 @@
 	width: 90%;
 	float: right;
 }
-#calendarTable{
+#calendar-table{
   table-layout: fixed;
   border-collapse: collapse;
   overflow: hidden;
@@ -29,18 +29,18 @@
   margin: 0;
   padding: 0;
  }
- #tableCalendar-header{
+ #table-calendar-header{
   background-color: #07889B;
   color:white;
  }
- #tableCalendar-title {
+ #calendar-table-header{
   height: 50px;
   color:white;
   text-align: center;
   position:relative;
   z-index: 100;
  }
- #tableBody TR TD{
+ #calendar-table-body TR TD{
    height:50px;
  }
 
