--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,6 +35,7 @@
  }
  #calendar-table-header{
   height: 50px;
+  background-color: black;
   color:white;
   text-align: center;
   position:relative;
