--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,12 +10,10 @@
 <table class="aui">
 <thead id="calendar-container-header">
 <TR>
-    <TH><button id="dialog-show-button" class="aui-button">Add an event</button></TH>
-    <TH><span id="select-previous-month"
-                class="aui-icon aui-icon-large aui-iconfont-arrows-left monthSelector">Insert meaningful text here for accessibility</span></TH>
-    <TH ID="tableCalendar-title" COLSPAN=4></TH>
-    <TH><span id="select-next-month"
-                class="aui-icon aui-icon-large aui-iconfont-arrows-right monthSelector">Insert meaningful text here for accessibility</span></TH>
+    <TH style="width:20%"><button id="dialog-show-button" class="aui-button">Add an event</button></TH>
+    <TH style="width:10%"><span id="select-previous-month" class="aui-icon aui-icon-large aui-iconfont-arrows-left monthSelector">Insert meaningful text here for accessibility</span></TH>
+    <TH  style="width:60%;text-align:center" ID="tableCalendar-title" COLSPAN=4></TH>
+    <TH style="width:10%"><span id="select-next-month" class="aui-icon aui-icon-large aui-iconfont-arrows-right monthSelector">Insert meaningful text here for accessibility</span></TH>
 </TR>
 </thead>
 </table>
