separated dayCells routines from main calendar UI'

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,139 +1,8 @@
-#event-create-dialog {
-   margin-top: -350px;
-   margin-left: -290px;
-   width: 580px;
-   height: auto;
-   z-index: 3002;
- }
-.calendar-container {
-
-}
-
-#calendar-container-header{
-    color:red;
-}
-
-.calendar-sidebar {
-	width: 10%;
-	margin: 0 auto;
-	float: left;
-	background:linear-gradient(120deg, lighten($blue-white, 5%), $blue-white);
-	padding-bottom: 0.7rem;
-    text-align:center;
-}
-/*********************************
- * calendar-table-container holds
- * the days of the week
- * ******************************/
-.calendar-table-container{
-	width: 80%;
-	float: right;
-}
-#calendar-table{
-  table-layout: fixed;
-  border-collapse: collapse;
-  overflow: hidden;
-  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  font-weight: 100;
-  color: rgba(0, 0, 0, 1);
-  margin: 0;
-  padding: 0;
- }
- #table-calendar-header{
-  background-color: #07889B;
-  color:white;
- }
- #calendar-table-header{
-  height: 50px;
-  background-color: black;
-  color:white;
-  text-align: center;
-  position:relative;
-  z-index: 100;
- }
- #calendar-table-body TR.week-row TD{
-   height:30px;
- }
- #calendar-table-body TR.event-row TD{
-   background-color: beige;
-    height:2px;
- }
-
-.event-list{
-margin-left:4px;
-padding-left: 1px;
-}
-
- .event-view{
-   background-color: #66B9BF;
-   margin-top:2px;
-   margin-bottom: 2px;
-   padding-left:4px;
-   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
- }
- .aui-expander-content{
-   color:white
- }
- .event-title{
-   color: white;
- }
- .event-controls{
-   width:100%;
-   display: inline;
- padding-left:8px;
- color:white;
- }
- .event-dates{
-   color: white;
- }
- .event-edit-btn{
-   cursor: pointer;
-   padding-left:4px;
- }
- .tableHeader h1 {
-   margin: 0;
-padding: 10px;
- text-align: center;
- vertical-align: top;
- font-size: 20px;
- line-height: 50px;
- font-weight: 100;
- letter-spacing: 1px;
- color:white;
- }
-
-.day {
- color:black;
- width: 60px;
- padding: 10px;
- text-align: center;
- vertical-align: top;
- cursor: pointer;
- position: relative;
- z-index: 100;
-}
-.today {
-
- background-color: #E37222;
- width: 60px;
- padding: 10px;
- text-align: center;
- vertical-align: top;
- cursor: pointer;
- position: relative;
- z-index: 100;
- color: white;
-}
-.date {
-
-}
-.dayEvents{
-}
-.monthSelector{
- text-align: center;
- vertical-align: top;
- cursor: pointer;
- position: relative;
- z-index: 100;
- color: rgba(156, 202, 235, 1);
+#calendar-container{
+  min-height:700px;
+  overflow-x:hidden;
+  border: 1px solid black;
+  position: static;
+  left:0px;
+  right:0px;
 }
