--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Bambi</title>
+    <title>{{title}}</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui.min.js"></script>
 
@@ -22,30 +22,35 @@
 </head>
 
 <body>
+
   <div id="page">
     <header id="header" role="banner">
-	    {{> page/header}}
+        {{>header}}
     </header>
 
-<div class="aui-page-panel">
-    <div class="aui-page-panel-inner">
-        <div class="aui-page-panel-nav">
-        {{> page/nav}}        
-        </div>
+    <div class="aui-page-panel">
+        <div class="aui-page-panel-inner">
+            <div class="aui-page-panel-nav"> 
+                <ul>
+<li>Events (shows events as a list of cards with a search bar, and various facets + create/edit/delete button)</li>
+<li>Manage Widgets (lets you edit/create/delete event views)</li>
+<li>New page - lets you create a new page, on which you can drop views</li>
+<li>Actions - actions can be triggered by events starting, ending, and they can 
+trigger events, or make other events change state</li>
+</div>
 
-        <section class="aui-page-panel-content">
-        {{{body}}}
-        </section>
+            <section class="aui-page-panel-content">
+             {{{body}}}
+            </section>
+        </div>
     </div>
+
+  <footer id="footer" role="contentinfo">
+        {{>footer}}
+  </footer>
 </div>
 
 
-  <footer id="footer" role="contentinfo">
-	{{> page/footer}}
-  </footer>
-  </div>
-
-
     <script src="/js/lib/bundle.js"></script>
-    </body>
+</body>
 </html>
