replaced browserify setup with webpack to bundle client component

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,44 +1,39 @@
-<h1>This is an event page</h1>
+
+<div class="page">
+<h1>This is a Bambi Container</h1>
+
+<div class="bambiContainer">
+    <div class="bambiCalendarDayCell">content</div>
+    <div class="bambiCalendarDayCell">content</div>
+    <div class="bambiCalendarDayCell">content</div>
+    <div class="bambiCalendarDayCell">content</div>
+    <div class="bambiCalendarDayCell">content</div>
+</div>
+
+    <P> 
+    It contains 5 <a>calendar days</a> Each span covers a length of time, in this case, 
+    those are days. 
+    </P>
+<h1>Events</h1>
+
+    <div class="bambiEvent">
+    </div>
+
+<h1>Spans</h1>
+
+<P>
+    A  time span represents a length of time...months, weeks, minutes, 
+    it doesn't matter. From seconds to Eons and milleniums!!!
+</P>
 
 <P>bambi let's your organization harness the power of automation for a fraction of the price of a consultant. 
 Check out our use cases, examples, and various real-life scenario. Click on the icons below to see how the 
 following companies use bambi to make their processes more responsive and save time and effort by automating
 mundane tasks. 
-<table><tr>
-<td>weirdWorld</td><td>beads</td><td>pardners</td>
-</tr></table>
+<h1>Chains</h1>
 
-<h1>Events</h1>
-<p> events can be public, private, or shared within a group. Events have: 
-<ul>
-    <li>state       : on, off - an event is always in one of those 2 states
-    <li>triggers    : that make the event change state
-    <li>actions     : actions are executed when the event changes state
-</ul>
+<div class="bambiContainer"></div>
 
-<h2>States and triggers</h2>
-<P> An event is always in one of two states: on or off. 
-    When events change states, we say they're triggered. 
-    Events can be triggered by:
-    <ul>
-    <li>    a time frequency function - for example every Friday at 7PM, or every 5 minutes, or once a year
-    <li>    some other event changing state 
-    <li>    date/time - for example, a calendar event
-    <li>    manually, using our many event controls. You can trigger events by pushing buttons, 
-            making selections, changing values, by text, email, or even phone 
-    <li>    Changes in a data source - for example if the price of a share drops below a certain value, or 
-            if the temperature in Mexico reaches a given threshold. Bambi lets you define monitors that 
-            query data from external sources
-    <li>    logical combinations of triggers - for example, you can define Trigger A as [TriggerB AND TriggerC]
-    </ul>
-<p>Bambi gives you the ability to create a quasi-infinity of triggers
-
-<h1>Event Factories</h1>
-<p>Bambi also lets you define factories. A factory lets you create new event based on a template. For example, 
-events created by a promotion factory might post to various social media and send emails to a list when 
-they go on. 
-
-<h1>Event Chains</h1>
 <p>you might also create event chains. Event chains are groups of events that are linked in predefined way. 
 An event chain can be: 
 <ul>
@@ -63,6 +58,18 @@ All event chains are themselves events as well.
 easy to edit in batch
 </ul>
 
+
+
+
+</div>
+
+
+
+<div class="page">
+
+
+
+
 Each view type has controls to let you create/edit/insert/delete events
 <p> you might create new events, or share events with other people, or import event from other people
 
@@ -80,7 +87,7 @@ Actions might
 
 <h1>Connecting to data sources</h1>
 bambi lets you connect to hundreds of data source to let you to automatically extract information
-
+</div>
 
 
 
