--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+@import "appView.css"; 
 
 :root{
 	--coquilleOeuf: #95cee4;
@@ -6,13 +7,54 @@
   --warmGray2: #e7e1da;
 }
 
-#calendar-container{
-   min-height:700px;
-   overflow-x:hidden;
-   border: 5px solid red;
-   position:static;
-   left:0px;
-   right:0px;
+body{
+  overflow: hidden;
+}
+
+section.pageContainer {
+  display: flex;
+  flex-direction: column;
+
+  overflow: hidden !important;
+  background-color: red;
+  margin:0; 
+  padding:0; 
+}
+.pageContainer>.page{
+  width:100%; 
+}
+.page{
+  background-color:orange ; 
+  height:90vh ; 
+  max-height:100vh ;
+  padding-left:10px ; 
+  padding-right: 10px ;
+  overflow: hidden ; 
+}
+
+.page div.bambiContainer{
+  width:100%; 
+}
+
+.bambiContainer{
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  width:30vw ;
+  min-width:30vw ;
+  min-height:10vh ;
+  background-color: orange ; 
+  overflow-x:hidden;
+  border: 5px solid red;
+}
+
+
+.bambiContainer >div.bambiCalendarDayCell{
+  background-color: white;
+  border-right: 1px solid black; 
+  min-width:20%; 
+  min-height:10%; 
 }
 
 #calendar-container-header{
@@ -141,3 +183,48 @@
    cursor: pointer;
    padding-left:4px;
  }
+/* Extra small devices (phones, 600px and down) 
+@media only screen and (max-width: 600px) {...}
+
+/* Small devices (portrait tablets and large phones, 600px and up) 
+@media only screen and (min-width: 600px) {...}
+
+/* Medium devices (landscape tablets, 768px and up) 
+@media only screen and (min-width: 768px) {...}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .appView>div.leftPanel{
+    display: block;
+    min-height: 100%;
+    height: 100%;
+    width:15vw;  
+  }
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+  .appView {
+    background-color: blue;
+    left:0;
+    top:5vh; 
+  }
+
+  .leftPanel{
+  }
+
+  appView div.pageContainer{
+    width:90vw;
+  }
+
+  div.pageContainer {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .pageContainer >div.page {
+    width:50%;
+  }
+}
