--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>{{title}}</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui.min.js"></script>
 
 
@@ -12,43 +14,34 @@
 
 	<!-- AUI Experimental components -->
 	<link rel="stylesheet" href="//aui-cdn.atlassian.com/aui-adg/6.0.9/css/aui-experimental.min.css" media="all">
-
-    <script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui-experimental.min.js"></script>
-
-	<!-- AUI Datepicker and Soy templates -->
-	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui-datepicker.min.js"></script>
-	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui-soy.min.js"></script> 
 	<link rel="stylesheet" href="/css/styles.css" media="all">
 </head>
 
 <body>
-
-  <div id="page">
     <header id="header" role="banner">
         {{>header}}
     </header>
 
-    <div class="aui-page-panel">
-        <div class="aui-page-panel-inner">
-            <div class="aui-page-panel-nav"> 
+    <div class="appView">
+            <div class="leftPanel"> 
                 <ul>
-<li>Events (shows events as a list of cards with a search bar, and various facets + create/edit/delete button)</li>
+<li>Events (show as events as a list of cards with a search bar, and various facets + create/edit/delete button)</li>
 <li>Manage Widgets (lets you edit/create/delete event views)</li>
 <li>New page - lets you create a new page, on which you can drop views</li>
 <li>Actions - actions can be triggered by events starting, ending, and they can 
 trigger events, or make other events change state</li>
+</ul>
 </div>
 
-            <section class="aui-page-panel-content">
+            <div class="pageContainer">
              {{{body}}}
-            </section>
+            </div>
         </div>
     </div>
-
+   </div>
   <footer id="footer" role="contentinfo">
         {{>footer}}
   </footer>
-</div>
 
 
     <script src="/js/lib/bundle.js"></script>
