--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>{{title}}</title>
     
-    <script type="text/javascript" src="https://livejs.com/live.js"></script>
+    <!--<script type="text/javascript" src="https://livejs.com/live.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="//aui-cdn.atlassian.com/aui-adg/6.0.9/js/aui.min.js"></script>
 
